hw12_13_14_15_calendar/templates_without_helm/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: shadowofelf/calendar:latest
          ports:
            - containerPort: 8080
            - containerPort: 50051
          volumeMounts:
            - name: calendar-data
              mountPath: /calendar
      volumes:
        - name: calendar-data
          emptyDir: {}
