hw12_13_14_15_calendar/templates_without_helm/calendar-sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-sender
  template:
    metadata:
      labels:
        app: calendar-sender
    spec:
      containers:
      - name: calendar-sender
        image: shadowofelf/calendar-sender:latest
        volumeMounts:
        - name: calendar-data
          mountPath: /calendar
      volumes:
      - name: calendar-data
        emptyDir: {}
