hw12_13_14_15_calendar/templates_without_helm/calendar-sheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-scheduler
  template:
    metadata:
      labels:
        app: calendar-scheduler
    spec:
      containers:
      - name: calendar-scheduler
        image: shadowofelf/calendar-scheduler:latest
        volumeMounts:
        - name: calendar-data
          mountPath: /calendar
      volumes:
      - name: calendar-data
        emptyDir: {}
