hw12_13_14_15_calendar/templates_without_helm/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbit-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbit-data
          persistentVolumeClaim:
            claimName: rabbit-data-pvc
