hw12_13_14_15_calendar/templates_without_helm/calendar-sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-sender-service
spec:
  selector:
    app: calendar-sender
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
