hw12_13_14_15_calendar/templates_without_helm/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
spec:
  selector:
    app: calendar
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
