hw12_13_14_15_calendar/templates_without_helm/calendar-sheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-scheduler-service
spec:
  selector:
    app: calendar-scheduler
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
  type: ClusterIP
