hw12_13_14_15_calendar/templates_without_helm/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: 5672
    targetPort: 5672
    name: web
  - protocol: TCP
    port: 15672
    targetPort: 15672
    name: back
